--- a/app/src/main/res/layout/emoji_view.xml
+++ b/app/src/main/res/layout/emoji_view.xml
@@ -23,22 +23,21 @@
     android:layout_height="wrap_content">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/emojis_pager"
+        android:id="@+id/emojiViewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emoji_divider" />
+        android:layout_above="@+id/emojiViewDivider" />
 
     <View
-        android:id="@+id/emoji_divider"
+        android:id="@+id/emojiViewDivider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_above="@id/emojis_tab"/>
+        android:layout_above="@id/emojiViewTab"/>
 
     <LinearLayout
-        android:id="@+id/emojis_tab"
+        android:id="@+id/emojiViewTab"
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal" />
-
 </RelativeLayout>
