--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -39,4 +39,25 @@
         <item>always</item>
     </array>
 
+    <array name="screen_lock_timeout_descriptions">
+        <item>@string/nc_screen_lock_timeout_30</item>
+        <item>@string/nc_screen_lock_timeout_60</item>
+        <item>@string/nc_screen_lock_timeout_300</item>
+        <item>@string/nc_screen_lock_timeout_600</item>
+    </array>
+
+    <array name="screen_lock_timeout_entry_values">
+        <item>@string/nc_screen_lock_timeout_thirty</item>
+        <item>@string/nc_screen_lock_timeout_sixty</item>
+        <item>@string/nc_screen_lock_timeout_three_hundred</item>
+        <item>@string/nc_screen_lock_timeout_six_hundred</item>
+    </array>
+
+    <array name="screen_lock_timeout_entry_int_values">
+        <item>30</item>
+        <item>60</item>
+        <item>300</item>
+        <item>600</item>
+    </array>
+
 </resources>
