Base commit for dark theme v1.5
Signed-off-by: Daniel Bailey <daniel.bailey@grappleIT.co.uk>

--- a/app/src/main/res/drawable/shape_incoming_message.xml
+++ b/app/src/main/res/drawable/shape_incoming_message.xml
@@ -28,6 +28,6 @@
         android:bottomLeftRadius="@dimen/message_bubble_corners_radius"
         android:topRightRadius="@dimen/message_bubble_corners_radius" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/bg_default" />
 
 </shape>
