--- a/app/src/main/res/layout/rv_item_browser_file.xml
+++ b/app/src/main/res/layout/rv_item_browser_file.xml
@@ -23,7 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/rv_item_view_height"
     android:layout_margin="@dimen/double_margin_between_elements"
-    android:background="@color/background_color">
+    android:background="@color/bg_default">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/file_icon"
