--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,27 +23,44 @@
     <color name="colorPrimary">#0082C9</color>
     <color name="colorPrimaryDark">#006AA3</color>
     <color name="colorAccent">#007CC2</color>
-    <color name="nc_outcoming_text_default">@color/white</color>
+
+    <!-- Text color of sent messages -->
+    <color name="nc_outcoming_text_default">#FFFFFF</color>
+    <!-- Text color of received messages -->
     <color name="nc_incoming_text_default">#37505D</color>
+
+    <!-- Name of person or group for the chat conversation -->
+    <color name="conversation_item_header">#37505D</color>
+    <color name="conversation_date">@color/warm_grey_two</color>
+    <color name="conversation_last_message">@color/warm_grey_four</color>
+    <color name="conversation_unread_bubble">#FFFFFF</color>
+
     <color name="nc_incoming_text_mention_you">#C98879</color>
     <color name="nc_incoming_text_mention_others">#37505D</color>
-    <color name="nc_text_color">@color/black</color>
 
     <color name="nc_darkRed">#D32F2F</color>
     <color name="nc_darkGreen">#006400</color>
     <color name="nc_white_color">@color/per70white</color>
     <color name="nc_light_blue_color">#7FC0E3</color>
-    <color name="nc_light_grey">#E8E8E8</color>
+    <color name="controller_chat_separator">#E8E8E8</color>
     <color name="grey_600">#757575</color>
     <color name="nc_grey">#D5D5D5</color>
-    <color name="material_white_smoke">#F5F5F5</color>
-    <color name="white30">#E9FFFFFF</color>
+    <color name="controller_call_incomingCallTextView">#E9FFFFFF</color>
     <color name="grey950">#111111</color>
 
-    <color name="emoji_background">#ECEFF1</color>
+    <!-- Emoji list in chat window -->
+    <color name="emoji_background">#eceff1</color>
     <color name="emoji_icons">#61000000</color>
     <color name="emoji_divider">#15000000</color>
 
-    <color name="background_color">#FAFAFA</color>
-</resources>
+    <color name="fg_default">#000000</color>
+    <color name="fg_inverse">#FFFFFF</color>
+    <color name="bg_default">#FFFFFF</color>
+    <color name="bg_alt">@color/white60</color>
+    <color name="bg_system_bubble_dark">#444444</color>
+    <color name="bg_bottom_sheet">#46ffffff</color>
 
+    <!-- "Conversation Info" window -->
+    <color name="bg_controller_conv_info">@color/bg_default</color>
+    <color name="bg_message_list_incoming_bubble">#979797</color>
+</resources>
