--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -64,8 +64,10 @@
         android:id="@id/messageSendButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
         android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
+        android:padding="4dp"
+        android:adjustViewBounds="true"
         android:layout_centerVertical="true" />
 
 </merge>
