Add changelog support, fix #479 and other things
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_incoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_text_message.xml
@@ -47,7 +47,7 @@
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
-        <TextView
+        <com.vanniktech.emoji.EmojiTextView
             android:id="@+id/messageAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
