--- a/app/src/main/res/layout/rv_item_menu.xml
+++ b/app/src/main/res/layout/rv_item_menu.xml
@@ -26,7 +26,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white">
 
-    <TextView
+    <com.vanniktech.emoji.EmojiTextView
         android:id="@+id/menu_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
