--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -82,8 +82,8 @@
 
             <org.webrtc.SurfaceViewRenderer
                 android:id="@+id/pip_video_view"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="@dimen/large_preview_dimension"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
                 android:visibility="invisible" />
@@ -94,7 +94,6 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal|bottom"
                 android:layout_marginBottom="20dp"
-
                 app:checked="false"
                 app:enableInitialAnimation="false"
                 app:frontBackgroundColor="@color/colorPrimary"
