--- a/app/src/main/res/layout/item_custom_outcoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_text_message.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="true"
             android:textColorHighlight="@color/nc_grey"
+            android:lineSpacingMultiplier="1.2"
             android:textIsSelectable="true" />
 
         <TextView
