Again update chip color
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/xml/chip_text_entry.xml
+++ b/app/src/main/res/xml/chip_text_entry.xml
@@ -19,10 +19,8 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<chip xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:textAppearance="@style/ChipAccentTextAppearance"
-    app:chipStrokeColor="@color/grey_600"
+<chip xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:chipStrokeColor="@color/colorAccent"
     app:chipStrokeWidth="1dp"
     app:chipBackgroundColor="@color/transparent"
     app:closeIconEnabled="false" />
