--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,6 @@
 
     <dimen name="minimum_file_preview_size">48dp</dimen>
     <dimen name="maximum_file_preview_size">192dp</dimen>
+
+    <dimen name="large_preview_dimension">80dp</dimen>
 </resources>
