--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:scaleType="centerCrop"
+        android:scaleType="centerInside"
         android:padding="4dp"
         android:adjustViewBounds="true"
         android:layout_centerVertical="true" />
