--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -27,36 +27,10 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.MagicCallActivity">
 
-    <RelativeLayout
-        android:id="@+id/connectingRelativeLayoutView"
+
+    <include layout="@layout/call_states"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:layout_width="@dimen/item_height"
-            android:layout_height="@dimen/item_height"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
-            android:indeterminateTintMode="src_in" />
-
-        <TextView
-            android:id="@+id/connectingTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/progress_bar"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="16dp"
-            android:text="@string/nc_connecting_call"
-            android:textAlignment="center"
-            android:textColor="@color/white" />
-
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:id="@+id/conversationRelativeLayoutView"
