--- a/app/src/main/res/xml/chip_outgoing_own_mention.xml
+++ b/app/src/main/res/xml/chip_outgoing_own_mention.xml
@@ -22,5 +22,5 @@
 <chip xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:textAppearance="@style/ChipMentionTextAppearance"
-    app:chipBackgroundColor="@color/white"
+    app:chipBackgroundColor="@color/bg_default"
     app:closeIconEnabled="false" />
