--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -31,6 +31,11 @@
 
     <!-- Chat window incoming message text & informational -->
     <color name="nc_incoming_text_default">#8FADBD</color>
+
+    <color name="nc_incoming_text_mention_you">#C98879</color>
+    <!--<color name="nc_incoming_text_mention_others">#3a718f</color>-->
+    <color name="nc_incoming_text_mention_others">@color/nc_darkRed</color>
+
     <color name="bg_message_list_incoming_bubble">#444444</color>
     <color name="nc_grey">@android:color/holo_purple</color>
     <color name="bg_bottom_sheet">#222222</color>
