--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,7 +22,8 @@
   -->
 
 <resources>
-    <color name="conversation_item_header">#6c94a8</color>
+    <color name="conversation_item_header">#9FBDCC</color>
+    <!--<color name="conversation_item_header">#CFCFCF</color>-->
 
     <color name="fg_default">#eeeeee</color>
 
@@ -30,15 +31,16 @@
     <color name="bg_alt">#333333</color>
 
     <!-- Chat window incoming message text & informational -->
-    <color name="nc_incoming_text_default">#8FADBD</color>
+    <color name="nc_incoming_text_default">#9FBDCC</color>
+    <!--<color name="nc_incoming_text_default">#CFCFCF</color>-->
 
     <color name="nc_incoming_text_mention_you">#C98879</color>
     <!--<color name="nc_incoming_text_mention_others">#3a718f</color>-->
     <color name="nc_incoming_text_mention_others">@color/nc_darkRed</color>
 
-    <color name="bg_message_list_incoming_bubble">#444444</color>
     <color name="nc_grey">@android:color/holo_purple</color>
     <color name="bg_bottom_sheet">#222222</color>
+    <color name="bg_message_list_incoming_bubble">#444444</color>
 
     <color name="emoji_background">#313031</color>
     <color name="emoji_divider">#15FFFFFF</color>
