Fix various issues with emojis
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -63,7 +63,7 @@
             app:flexWrap="wrap"
             app:justifyContent="flex_end">
 
-            <com.vanniktech.emoji.EmojiTextView
+            <TextView
                 android:id="@id/messageText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
