--- a/app/src/main/res/layout/controller_settings.xml
+++ b/app/src/main/res/layout/controller_settings.xml
@@ -120,12 +120,17 @@
         apc:mpc_title="@string/nc_settings_appearance"
         apc:mpc_title_color="@color/colorPrimary">
 
-        <com.yarolegovich.mp.MaterialSwitchPreference
+        <com.yarolegovich.mp.MaterialChoicePreference
             android:id="@+id/settings_theme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             apc:mp_key="@string/nc_settings_theme_key"
-            apc:mp_title="@string/nc_settings_theme_title" />
+            apc:mp_title="@string/nc_settings_theme_title"
+            apc:mp_default_value="@string/nc_default_theme"
+            apc:mp_entry_values="@array/theme_entry_values"
+            apc:mp_entry_descriptions="@array/theme_descriptions"
+            apc:mp_show_value="onBottom"
+            />
 
     </com.yarolegovich.mp.MaterialPreferenceCategory>
 
@@ -184,7 +189,7 @@
             apc:mp_entry_values="@array/screen_lock_timeout_entry_values"
             apc:mp_entry_descriptions="@array/screen_lock_timeout_descriptions"
             apc:mp_key="@string/nc_settings_screen_lock_timeout_key"
-            apc:mp_show_value="onRight"
+            apc:mp_show_value="onBottom"
             apc:mp_title="@string/nc_settings_screen_lock_timeout_title" />
 
         <com.yarolegovich.mp.MaterialSwitchPreference
