--- a/app/src/main/res/drawable/mention_chip.xml
+++ b/app/src/main/res/drawable/mention_chip.xml
@@ -22,5 +22,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="@color/bg_default"/>
+        android:color="@color/bg_dark_mention_chips"/>
 </shape>
