--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,6 +64,7 @@
     <color name="bg_default">#FFFFFF</color>
     <color name="bg_alt">@color/white60</color>
     <color name="bg_system_bubble_dark">#444444</color>
+    <color name="bg_dark_mention_chips">#333333</color>
     <color name="bg_message_list_incoming_bubble">#EFEFEF</color>
     <color name="bg_message_list_incoming_bubble_dark2">#444444</color>
     <color name="bg_bottom_sheet">#46ffffff</color>
