Fix lobby check crash, fix user related crash, fix infinite lobby progress bar
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -38,7 +38,7 @@
         android:tint="@color/colorPrimary"
         android:visibility="gone" />
 
-    <EmojiTextView
+    <androidx.emoji.widget.EmojiTextView
         android:id="@+id/name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
