Change mute call behaviour
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/notification_settings_item.xml
+++ b/app/src/main/res/layout/notification_settings_item.xml
@@ -48,7 +48,8 @@
             android:layout_height="wrap_content"
             apc:mp_default_value="false"
             apc:mp_key="mute_calls"
-            apc:mp_title="@string/nc_mute_calls" />
+            apc:mp_title="@string/nc_mute_calls"
+            apc:mp_summary="@string/nc_mute_calls_desc"/>
 
     </com.yarolegovich.mp.MaterialPreferenceCategory>
 
