Fix #601 and mentions
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_custom_outcoming_text_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_text_message.xml
@@ -38,7 +38,7 @@
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
-        <TextView
+        <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
