--- a/app/src/main/res/layout/item_system_message.xml
+++ b/app/src/main/res/layout/item_system_message.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true">
 
-        <TextView
+        <androidx.emoji.widget.EmojiTextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
