--- a/app/src/main/res/layout/controller_entry_menu.xml
+++ b/app/src/main/res/layout/controller_entry_menu.xml
@@ -54,7 +54,7 @@
         app:passwordToggleDrawable="@drawable/asl_password_visibility"
         app:passwordToggleTint="@color/grey_600">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.nextcloud.talk.utils.EmojiTextInputEditText
             android:id="@+id/text_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
