- Adding pager for scheduled and past meetings - API for All meetings

--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -61,10 +61,15 @@
         app:attachmentButtonDefaultIconColor="@color/white"
         app:attachmentButtonHeight="36dp"
         app:attachmentButtonWidth="36dp"
-        app:inputButtonDefaultBgColor="@color/colorPrimary"
+        app:inputButtonDefaultBgColor="@android:color/transparent"
+        app:inputButtonDefaultBgDisabledColor="@android:color/transparent"
+        app:inputButtonDefaultIconColor="@color/white"
+        app:inputButtonDefaultIconPressedColor="@color/white"
+        app:inputButtonIcon="@drawable/ic_send_primary"
         app:inputButtonHeight="36dp"
         app:inputButtonMargin="8dp"
         app:inputButtonWidth="36dp"
+        app:inputCursorDrawable="@color/colorPrimary"
         app:inputHint="@string/nc_hint_enter_a_message"
         app:inputTextColor="@color/fg_default"
         app:inputTextSize="16sp"
