--- a/app/src/main/res/drawable/ic_meeting_owner.xml
+++ b/app/src/main/res/drawable/ic_meeting_owner.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Nextcloud Talk application
   ~
@@ -19,7 +18,17 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<resources>
-<!--    <string name="nc_default_theme">@string/nc_settings_theme_follow_system_key</string>-->
-    <string name="nc_default_theme">@string/nc_settings_theme_dark</string>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="@color/bg_theme_green"
+      android:pathData="M9,17l3,-2.94c-0.39,-0.04 -0.68,-0.06 -1,-0.06 -2.67,0 -8,1.34 -8,4v2h9l-3,-3zM11,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4"
+      android:fillType="evenOdd"/>
+  <path
+      android:fillColor="@color/bg_theme_green"
+      android:pathData="M15.47,20.5L12,17l1.4,-1.41 2.07,2.08 5.13,-5.17 1.4,1.41z"
+      android:fillType="evenOdd"/>
+</vector>
