--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -49,7 +49,7 @@
         android:layout_toStartOf="@id/messageSendButton"
         android:background="@color/transparent"
         android:src="@drawable/ic_insert_emoticon_black_24dp"
-        android:tint="@color/emoji_icons" />
+        android:tint="@color/colorPrimary" />
 
     <ImageButton
         android:id="@id/messageSendButton"
