Significant improvements to the dark theme
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -66,7 +66,7 @@
         app:inputButtonMargin="8dp"
         app:inputButtonWidth="36dp"
         app:inputHint="@string/nc_hint_enter_a_message"
-        app:inputTextColor="@color/fg_default"
+        app:inputTextColor="@color/nc_incoming_text_default"
         app:inputTextSize="16sp"
         app:showAttachmentButton="true" />
 
