--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,10 +63,15 @@
 
     <color name="bg_default">#FFFFFF</color>
     <color name="bg_alt">@color/white60</color>
-    <color name="bg_system_bubble_dark">#444444</color>
+    <color name="nc_chip_mention_you_background">@color/colorAccent</color>
+    <color name="nc_chip_mention_others_background">#6F6F6F</color>
     <color name="bg_dark_mention_chips">#333333</color>
-    <color name="bg_message_list_incoming_bubble">#EFEFEF</color>
-    <color name="bg_message_list_incoming_bubble_dark2">#444444</color>
+
+
+    <color name="bg_message_list_incoming_bubble">#D5D5D5</color>
+    <color name="bg_message_list_outcoming_bubble">#003F62</color>
+
+    <color name="nc_author_text">@color/colorPrimary</color>
     <color name="bg_bottom_sheet">#46ffffff</color>
 
     <!-- "Conversation Info" window -->
