--- a/app/src/main/res/xml/chip_others.xml
+++ b/app/src/main/res/xml/chip_others.xml
@@ -21,8 +21,6 @@
 
 <chip xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:textAppearance="@style/ChipOutgoingTextAppearance"
-    app:chipStrokeColor="@color/bg_default"
-    app:chipBackgroundColor="@color/transparent"
-    app:chipStrokeWidth="1dp"
+    android:textAppearance="@style/ChipIncomingTextAppearance"
+    app:chipBackgroundColor="@color/nc_chip_mention_others_background"
     app:closeIconEnabled="false" />
