--- a/app/src/main/res/drawable/ic_link_white_24px.xml
+++ b/app/src/main/res/drawable/ic_link_white_24px.xml
@@ -22,7 +22,7 @@
     android:autoMirrored="true" android:height="24dp"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#D5D5D5" android:fillType="nonZero"
+    <path android:fillColor="@color/bg_message_list_incoming_bubble" android:fillType="nonZero"
         android:pathData="M0,0l24,0l0,24l-24,0z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
