--- a/app/src/main/res/drawable/shape_grouped_incoming_message.xml
+++ b/app/src/main/res/drawable/shape_grouped_incoming_message.xml
@@ -28,6 +28,6 @@
         android:bottomLeftRadius="@dimen/message_bubble_corners_radius"
         android:topRightRadius="@dimen/message_bubble_corners_radius" />
 
-    <solid android:color="@color/bg_default" />
+    <solid android:color="@color/bg_message_list_incoming_bubble" />
 
 </shape>
