--- a/app/src/main/res/xml/chip_you.xml
+++ b/app/src/main/res/xml/chip_you.xml
@@ -21,6 +21,6 @@
 
 <chip xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:textAppearance="@style/ChipMentionTextAppearance"
-    app:chipBackgroundColor="@color/bg_default"
-    app:closeIconEnabled="false" />
+    android:textAppearance="@style/ChipOutgoingTextAppearance"
+    app:chipBackgroundColor="@color/nc_chip_mention_you_background"
+    app:closeIconEnabled="false"/>
